# gaussian_processes

./: .gitignore  README.md  pyproject.toml
api/: app.py
frontend/: file_upload.html
modeling/: gpr.py
modeling/documentation/: GPR.md
optimization/: Optimization.md  checkpoint  gpr_model_checkpoint-1.data-00000-of-00001  gpr_model_checkpoint-1.index  opt.py  pyomo_opt.py
